--- a/circle.yml
+++ b/circle.yml
@@ -1,11 +1,35 @@
+machine:
+  java:
+    version: oraclejdk8
+
+  environment:
+    VELOCITY_CI: true
+
 dependencies:
+  cache_directories:
+    - "~/.meteor"
+    - "~/.npm"
+
   override:
-    # Install Meteor
-    - curl https://install.meteor.com | sh
+  	# Update to the latest chrome
+    - wget -q -O - https://dl-ssl.google.com/linux/linux_signing_key.pub | sudo apt-key add -
+    - sudo sh -c 'echo "deb http://dl.google.com/linux/chrome/deb/ stable main" >> /etc/apt/sources.list.d/google.list'
+    - sudo apt-get update
+    - sudo apt-get install google-chrome-stable
+
+    # Restore the meteor symlink   
+    - if [ -d ~/.meteor ]; then sudo ln -s ~/.meteor/meteor /usr/local/bin/meteor; fi
+    # Install Meteor if the cache didn't restore it
+    - if [ ! -e ~/.meteor/meteor ]; then curl https://install.meteor.com | sh; fi
+
 
 test:
   override:
     # Run tests in Velocity CI Mode
     - meteor --test:
         environment:
-          VELOCITY_CI: true
+          CUCUMBER_SCREENSHOTS_DIR: "$CIRCLE_ARTIFACTS/screenshots/chrome"
+          CUCUMBER_JSON_OUTPUT: "$CIRCLE_TEST_REPORTS/chrome.cucumber"
+          SELENIUM_BROWSER: chrome
+    - mkdir -p $CIRCLE_ARTIFACTS/chrome
+    - cp .meteor/local/log/*.log $CIRCLE_ARTIFACTS/chrome
