home page examples shuffle

--- a/settings.json
+++ b/settings.json
@@ -2,6 +2,7 @@
   "public" : {
     "ga": {
       "account":"UA-71089627-1"
-    }
+    },
+    "examples": ["on verra bien", "Faux pas", "croissant", "parler", "nous resterons", "pastis", "voudrais", "en fait", "comprendre", "expression", "je fasse", "grimper", "escalade", "responsable", "cueillir", "ailleurs", "pays", "yeux", "pardon", "encyclopédie", "gourmand", "déjà-vu", "genre", "liaison"]
   }
 }
