examply words update

--- a/settings.json
+++ b/settings.json
@@ -3,6 +3,6 @@
     "ga": {
       "account":"UA-71089627-1"
     },
-    "examples": ["on verra bien", "Faux pas", "croissant", "parler", "nous resterons", "pastis", "voudrais", "en fait", "comprendre", "expression", "je fasse", "grimper", "escalade", "responsable", "cueillir", "ailleurs", "pays", "yeux", "pardon", "encyclopédie", "gourmand", "déjà-vu", "genre", "liaison"]
+    "examples": ["on verra bien", "faux pas", "croissant", "parler", "nous resterons", "pastis", "voudrais", "en fait", "comprendre", "expression", "je fasse", "grimper", "escalade", "responsable", "cueillir", "ailleurs", "pays", "yeux", "pardon", "encyclopédie", "gourmand", "déjà-vu", "genre", "liaison", "espèces"]
   }
 }
