--- a/circle.yml
+++ b/circle.yml
@@ -13,9 +13,10 @@ dependencies:
   override:
     # Update to the latest chrome
     - wget -q -O - https://dl-ssl.google.com/linux/linux_signing_key.pub | sudo apt-key add -
-    - sudo sh -c 'echo "deb http://dl.google.com/linux/chrome/deb/ stable main" >> /etc/apt/sources.list.d/google.list'
+    - sudo sh -c 'echo "deb http://dl.google.com/linux/chrome/deb/ stable main" >> /etc/apt/sources.list.d/google-chrome.list'
     - sudo apt-get update
     - sudo apt-get install google-chrome-stable
+    - sudo npm install -g chimp
 
     # Restore the meteor symlink   
     - if [ -d ~/.meteor ]; then sudo ln -s ~/.meteor/meteor /usr/local/bin/meteor; fi
