--- a/circle.yml
+++ b/circle.yml
@@ -30,7 +30,7 @@ dependencies:
 test:
   override:
     # Run tests in Velocity CI Mode
-    - meteor npm run test:
+    - chimp --ddp=http://localhost:3000 --path=tests --jsonOutput=$CIRCLE_TEST_REPORTS/chrome.cucuber:
         background: true
     - meteor npm run chimp-test:
         environment:
