circleci: install selenium standalone

--- a/circle.yml
+++ b/circle.yml
@@ -18,6 +18,7 @@ dependencies:
     - sudo sh -c 'echo "deb [arch=amd64] http://dl.google.com/linux/chrome/deb/ stable main" >> /etc/apt/sources.list.d/google-chrome.list'
     - sudo apt-get update
     - sudo apt-get install google-chrome-stable
+    - npm install selenium-standalone@latest -g
     - npm install -g chimp
 
     # Restore the meteor symlink   
