--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "homepage": "https://github.com/wolasss/prononce.me#readme",
   "scripts": {
     "test": "meteor test --full-app --driver-package tmeasday:acceptance-test-driver",
+    "build": "meteor build --architecture os.linux.x86_64 prononce-bundle",
     "chimp-test": "chimp --ddp=http://localhost:3000 --browser=firefox --path=tests --jsonOutput=$CIRCLE_TEST_REPORTS/chrome.cucuber"
   }
 }
