--- a/package.json
+++ b/package.json
@@ -7,11 +7,30 @@
     "test": "tests"
   },
   "dependencies": {
-    "babel-runtime": "^6.18.0"
+    "@babel/runtime": "^7.9.2",
+    "fibers": "^4.0.2"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "@babel/core": "^7.9.0",
+    "@babel/preset-env": "^7.9.0",
+    "@babel/register": "^7.9.0",
+    "@wdio/cli": "^5.18.7",
+    "@wdio/cucumber-framework": "^5.18.6",
+    "@wdio/local-runner": "^5.18.7",
+    "@wdio/selenium-standalone-service": "^5.16.10",
+    "@wdio/spec-reporter": "^5.18.7",
+    "@wdio/sync": "^5.18.7",
+    "chai": "^4.2.0",
+    "cucumber": "^6.0.5",
+    "semantic-release": "^17.0.4",
+    "start-server-and-test": "^1.10.11",
+    "wdio-json-reporter": "^1.4.0",
+    "wdio-spec-reporter": "^0.1.5",
+    "webdriverio": "^5.18.7"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test:e2e": "wdio ./tests/e2e/config/cucumber.suite.js",
+    "ci:e2e": "start-server-and-test 'meteor --settings settings.json' http://localhost:3000 test:e2e"
   },
   "repository": {
     "type": "git",
@@ -22,10 +41,5 @@
   "bugs": {
     "url": "https://github.com/wolasss/prononce.me/issues"
   },
-  "homepage": "https://github.com/wolasss/prononce.me#readme",
-  "scripts": {
-    "test": "meteor test --full-app --driver-package tmeasday:acceptance-test-driver",
-    "build": "meteor build --architecture os.linux.x86_64 prononce-bundle",
-    "chimp-test": "chimp --ddp=http://localhost:3000 --browser=firefox --path=tests --jsonOutput=$CIRCLE_TEST_REPORTS/chrome.cucuber"
-  }
+  "homepage": "https://github.com/wolasss/prononce.me#readme"
 }
